--- a/index.html
+++ b/index.html
@@ -1,1 +1,173 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="TaxMate - Empowering vulnerable groups with tax and superannuation assistance">
+    <title>TaxMate - Tax Inclusion for Vulnerable Groups</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #004e92;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+
+        nav {
+            background-color: #003366;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .hero {
+            background: linear-gradient(to right, #56ccf2, #2f80ed);
+            padding: 60px 20px;
+            text-align: center;
+            color: white;
+        }
+
+        .hero h2 {
+            font-size: 2rem;
+            margin-bottom: 10px;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+        }
+
+        .cta-button {
+            background-color: #00aaff;
+            color: white;
+            padding: 10px 20px;
+            font-size: 1rem;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        section {
+            padding: 20px;
+            text-align: center;
+        }
+
+        .content {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .content h3 {
+            font-size: 1.8rem;
+            margin-bottom: 10px;
+        }
+
+        .content p {
+            font-size: 1.1rem;
+            color: #333;
+        }
+
+        .content img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        footer {
+            background-color: #003366;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
+        }
+    </style>
+</head>
+
+<body>
+
+    <header>
+        <h1>TaxMate</h1>
+        <p>Empowering Vulnerable Australians with Tax and Superannuation Assistance</p>
+    </header>
+
+    <nav>
+        <a href="#about">About</a>
+        <a href="#features">Features</a>
+        <a href="#data">Data Sources</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <section class="hero">
+        <h2>Making Tax Compliance Accessible for Everyone</h2>
+        <p>TaxMate is a digital platform designed to assist vulnerable groups in Australia to manage their tax and super
+            obligations with ease.</p>
+        <a href="#features" class="cta-button">Learn More</a>
+    </section>
+
+    <section id="about" class="content">
+        <h3>About TaxMate</h3>
+        <p>TaxMate is a comprehensive digital solution aimed at helping vulnerable and at-risk groups, such as people
+            from culturally diverse backgrounds, low-income individuals, older citizens, and those with low digital
+            literacy, comply with their tax and superannuation obligations. By leveraging open government data and
+            artificial intelligence, TaxMate offers personalized guidance, proactive notifications, and a user-friendly
+            platform to make tax compliance easier for all.</p>
+    </section>
+
+    <section id="features" class="content">
+        <h3>Key Features</h3>
+        <p>TaxMate provides a wide range of features designed to simplify the tax process for vulnerable groups:</p>
+        <ul>
+            <li>AI-powered chatbot for 24/7 assistance in multiple languages</li>
+            <li>Proactive notifications and reminders for tax filing deadlines</li>
+            <li>Personalized educational resources in text, video, and audio formats</li>
+            <li>Financial health tools to assess and improve financial stability</li>
+            <li>Mobile-first design to ensure accessibility for all users</li>
+        </ul>
+    </section>
+
+    <section id="data" class="content">
+        <h3>Data Sources</h3>
+        <p>TaxMate uses open government datasets to provide valuable insights and support:</p>
+        <ul>
+            <li><a href="https://data.gov.au/dataset/ds-dga-c2251b13-5db1-403e-bbc5-82a473b91d5a/details"
+                    target="_blank">Taxation Statistics 2021-22</a></li>
+            <li><a href="https://data.gov.au/dataset/ds-dga-199009c8-86f4-4b17-b17f-fd9f1798b2fd/details"
+                    target="_blank">Self-Managed Superannuation Funds</a></li>
+            <li><a href="https://data.gov.au/dataset/ds-dga-b131b828-05b3-4d86-97c2-981278d6a77f/details"
+                    target="_blank">Higher Education Loan Program (HELP)</a></li>
+            <li><a href="https://www.abs.gov.au/statistics/industry/technology-and-innovation/household-use-information-technology-australia/latest-release"
+                    target="_blank">Household Use of Information Technology</a></li>
+            <li><a href="https://www.abs.gov.au/census" target="_blank">Census Data</a></li>
+        </ul>
+    </section>
+
+    <footer id="contact">
+        <p>Contact us at <a href="mailto:support@taxmate.com" style="color: #00aaff;">support@taxmate.com</a></p>
+        <p>&copy; 2024 TaxMate. All Rights Reserved.</p>
+    </footer>
+
+</body>
+
+</html>
 
